[workspace]
members = ["utils"]

[package]
name = "fuzzy_dbscan"
version = "0.3.0"
authors = ["Christoph Schulz <schulzcbs@gmail.com>"]
description = "An implementation of the FuzzyDBSCAN algorithm"
homepage = "https://github.com/schulzch/fuzzy_dbscan"
repository = "https://github.com/schulzch/fuzzy_dbscan"
readme = "README.md"
keywords = [
    "fuzzy",
    "cluster",
    "clustering",
    "FuzzyDBSCAN",
    "DBSCAN"
]
categories = ["algorithms"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "0.2.28"
features = ["serde-serialize"]

[dev-dependencies]
utils = { path = "utils" }
criterion = "0.2"

[[bench]]
name = "lib"
harness = false
