[package]
name = "fuzzy_dbscan"
edition = "2021"
version = "0.3.0"
authors = ["Christoph Schulz <schulzcbs@gmail.com>"]
homepage = "https://github.com/schulzch/fuzzy_dbscan"
repository = "https://github.com/schulzch/fuzzy_dbscan"
readme = "README.md"
keywords = [
    "fuzzy",
    "cluster",
    "clustering",
    "FuzzyDBSCAN",
    "DBSCAN"
]
categories = ["algorithms"]
license = "Apache-2.0"
description = """
An implementation of the FuzzyDBSCAN algorithm
"""

[workspace]
members = ["utils"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "^1.0.147"
serde_derive = "^1.0.147"

[dependencies.wasm-bindgen]
version = "0.2.83"
features = ["serde-serialize"]

[dev-dependencies]
utils = { version = "0.*", path = "utils" }
criterion = "0.4"

[[bench]]
name = "lib"
harness = false
